--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -6,13 +6,15 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 .website-logo {
   width: 80px;
   height: 50px;
   margin-top: 20px;
+  margin-left: 20px;
+}
+.each-nav-tem {
   margin-left: 20px;
 }
 
@@ -28,6 +30,7 @@
   color: white;
   text-decoration: none;
   cursor: pointer;
+  list-style-type: none;
 }
 .logout-button {
   background-color: #6366f1;
