--- a/src/components/similarJobCard/index.css
+++ b/src/components/similarJobCard/index.css
@@ -3,16 +3,7 @@
   width: 50px;
   margin-right: 20px;
 }
-.eachJobItem {
-  background-color: #272727;
-  padding: 10px;
-  margin-bottom: 20px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 10px;
-  list-style-type: none;
-  color: white;
-}
+
 .dflex {
   display: flex;
   flex-direction: row;
@@ -48,4 +39,26 @@
 
 .class-link {
   text-decoration: none;
+}
+.special-cont {
+  background-color: #272727;
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 300px;
+  margin-right: 20px;
+  border-radius: 10px;
+  list-style-type: none;
+  color: white;
+  margin-right: 18px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.jobs-location {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
 }
