--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -89,3 +89,15 @@
   align-items: center;
   width: 100%;
 }
+
+.failure-cont {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  background-color: black;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  max-height: 100vh;
+}
