--- a/src/components/FilterGroup/index.css
+++ b/src/components/FilterGroup/index.css
@@ -10,3 +10,17 @@
   color: white;
   font-size: 20px;
 }
+.filter-container {
+  color: white;
+}
+
+.rating-item {
+  list-style-type: none;
+}
+
+.ratings-list {
+  padding: 0px;
+  margin: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
