--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -9,7 +9,7 @@
 
 .login-form {
   background-color: #272727;
-  height: 350px;
+  padding: 10px;
   width: 350px;
   text-align: center;
   padding: 20px;
@@ -56,4 +56,5 @@
   color: red;
   font-size: 10px;
   font-weight: 900;
+  text-align: left;
 }
