--- a/src/components/similarJobCard/index.css
+++ b/src/components/similarJobCard/index.css
@@ -62,3 +62,9 @@
   justify-content: space-between;
   align-items: flex-end;
 }
+
+.rating-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
