--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -101,3 +101,26 @@
   color: white;
   max-height: 100vh;
 }
+
+.empty-list-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.noJobsImage {
+  width: 500px;
+  height: 500px;
+}
+
+@media only screen and (max-width: 576px) {
+  .noJobsImage {
+    width: 300px;
+    height: 200px;
+  }
+}
